fix spacings on the queue card

--- a/src/components/QueueCard/QueueCard.css
+++ b/src/components/QueueCard/QueueCard.css
@@ -31,10 +31,16 @@
 
 .queue-card-customizations {
   display: flex;
+  flex-direction: column;
+}
+
+.queue-card-customizations .queue-card-configs {
+  display: flex;
   flex-direction: row;
 }
-.queue-card-customizations > div > span {
-  margin-right: 1rem;
+
+
+.queue-card-configs > div > span {
   padding-left: 0.2rem;
 }
 
